syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/modules_obs_websocket";
package messages.modules_obs_websocket;

message GetResponse {
	uint32 server_port = 1;
	string server_address = 2;
	string server_password = 3;

	repeated string sources = 4;
	repeated string audio_sources = 5;
	repeated string scenes = 6;
	bool isConnected = 7;
}

message PostRequest {
	uint32 server_port = 1;
	string server_address = 2;
	string server_password = 3;
}
